syntax = "proto3";
package systables.v1;

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/descriptor.proto";
import "pagin.proto";

option go_package = "hope/api/admin/systables/v1;v1";

// The SysTables service definition.
service SysTables {

  // 分页查询SysTables
  rpc GetPageSysTables (SysTablesPageReq) returns (SysTablesPageReply)  {
    option (google.api.http) = {
      get: "/v1/sys/tables/page"
    };
  }

  // 获取SysTables
  rpc GetSysTables (SysTablesReq) returns (SysTablesReply)  {
    option (google.api.http) = {
      get: "/v1/sys/tables/{id}"
    };
  }

  // 更新SysTables
  rpc UpdateSysTables (SysTablesUpdateReq) returns (SysTablesUpdateReply)  {
    option (google.api.http) = {
      put: "/v1/sys/tables/{id}"
      body: "*"
    };
  }

  // 创建SysTables
  rpc CreateSysTables (SysTablesCreateReq) returns (SysTablesCreateReply)  {
    option (google.api.http) = {
      post: "/v1/sys/tables"
      body: "*"
    };
  }

  // 删除SysTables
  rpc DeleteSysTables (SysTablesDeleteReq) returns (SysTablesDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/sys/tables/{id}"
    };
  }

  // 批量删除SysTables
  rpc BatchDeleteSysTables (SysTablesBatchDeleteReq) returns (SysTablesDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/sys/tables"
    };
  }

}

// 查询搜索请求
message SysTablesPageReq {
    //分页查询参数
    pagin.Pagination pagin = 1;
    //查询条件参数
    SysTablesReq param = 2;
}

// 查询搜索返回
message SysTablesPageReply {
    //分页参数
    pagin.Pagination pagin = 1;
    //查询条目
    repeated SysTablesReply items = 2;
}


// 查询搜索请求
message SysTablesReq {
    int64 id = 1;
    //表名称
    string tableName = 2;
    //表备注
    string tableComment = 3;
    //类名
    string className = 4;
    //
    string tplCategory = 5;
    //包名
    string packageName = 6;
    //go文件名
    string moduleName = 7;
    //前端文件名
    string moduleFrontName = 8;
    //
    string businessName = 9;
    //功能名称
    string functionName = 10;
    //功能作者
    string functionAuthor = 11;
    //
    string pkColumn = 12;
    //
    string pkGoField = 13;
    //
    string pkJsonField = 14;
    //
    string options = 15;
    //
    string treeCode = 16;
    //
    string treeParentCode = 17;
    //
    string treeName = 18;
    //
    bool tree = 19;
    //
    bool crud = 20;
    //
    string remark = 21;
    //
    int32 isDataScope = 22;
    //
    int32 isActions = 23;
    //
    int32 isAuth = 24;
    //
    string isLogicalDelete = 25;
    //
    bool logicalDelete = 26;
    //
    string logicalDeleteColumn = 27;
    //创建时间
    google.protobuf.Timestamp createdAt = 28;
    //更新时间
    google.protobuf.Timestamp updatedAt = 29;
    //创建者
    int64 createBy = 30;
    //更新者
    int64 updateBy = 31;
    //租户
    int64 tenantId = 32;

}

// 查询搜索返回
message SysTablesReply {
    int64 id = 1;
    //表名称
    string tableName = 2;
    //表备注
    string tableComment = 3;
    //类名
    string className = 4;
    //
    string tplCategory = 5;
    //包名
    string packageName = 6;
    //go文件名
    string moduleName = 7;
    //前端文件名
    string moduleFrontName = 8;
    //
    string businessName = 9;
    //功能名称
    string functionName = 10;
    //功能作者
    string functionAuthor = 11;
    //
    string pkColumn = 12;
    //
    string pkGoField = 13;
    //
    string pkJsonField = 14;
    //
    string options = 15;
    //
    string treeCode = 16;
    //
    string treeParentCode = 17;
    //
    string treeName = 18;
    //
    bool tree = 19;
    //
    bool crud = 20;
    //
    string remark = 21;
    //
    int32 isDataScope = 22;
    //
    int32 isActions = 23;
    //
    int32 isAuth = 24;
    //
    string isLogicalDelete = 25;
    //
    bool logicalDelete = 26;
    //
    string logicalDeleteColumn = 27;
    //创建时间
    google.protobuf.Timestamp createdAt = 28;
    //更新时间
    google.protobuf.Timestamp updatedAt = 29;
    //创建者
    int64 createBy = 30;
    //更新者
    int64 updateBy = 31;
    //租户
    int64 tenantId = 32;

}

// 创建SysTables请求
message SysTablesCreateReq {
    //表名称
    string tableName = 1;
    //表备注
    string tableComment = 2;
    //类名
    string className = 3;
    //
    string tplCategory = 4;
    //包名
    string packageName = 5;
    //go文件名
    string moduleName = 6;
    //前端文件名
    string moduleFrontName = 7;
    //
    string businessName = 8;
    //功能名称
    string functionName = 9;
    //功能作者
    string functionAuthor = 10;
    //
    string pkColumn = 11;
    //
    string pkGoField = 12;
    //
    string pkJsonField = 13;
    //
    string options = 14;
    //
    string treeCode = 15;
    //
    string treeParentCode = 16;
    //
    string treeName = 17;
    //
    bool tree = 18;
    //
    bool crud = 19;
    //
    string remark = 20;
    //
    int32 isDataScope = 21;
    //
    int32 isActions = 22;
    //
    int32 isAuth = 23;
    //
    string isLogicalDelete = 24;
    //
    bool logicalDelete = 25;
    //
    string logicalDeleteColumn = 26;

}

// 创建SysTables返回
message SysTablesCreateReply {
    int64 id = 1;
    //表名称
    string tableName = 2;
    //表备注
    string tableComment = 3;
    //类名
    string className = 4;
    //
    string tplCategory = 5;
    //包名
    string packageName = 6;
    //go文件名
    string moduleName = 7;
    //前端文件名
    string moduleFrontName = 8;
    //
    string businessName = 9;
    //功能名称
    string functionName = 10;
    //功能作者
    string functionAuthor = 11;
    //
    string pkColumn = 12;
    //
    string pkGoField = 13;
    //
    string pkJsonField = 14;
    //
    string options = 15;
    //
    string treeCode = 16;
    //
    string treeParentCode = 17;
    //
    string treeName = 18;
    //
    bool tree = 19;
    //
    bool crud = 20;
    //
    string remark = 21;
    //
    int32 isDataScope = 22;
    //
    int32 isActions = 23;
    //
    int32 isAuth = 24;
    //
    string isLogicalDelete = 25;
    //
    bool logicalDelete = 26;
    //
    string logicalDeleteColumn = 27;
    //创建时间
    google.protobuf.Timestamp createdAt = 28;
    //更新时间
    google.protobuf.Timestamp updatedAt = 29;
    //创建者
    int64 createBy = 30;
    //更新者
    int64 updateBy = 31;
    //租户
    int64 tenantId = 32;

}

// 更新SysTables请求
message SysTablesUpdateReq {
    int64 id = 1;
    //表名称
    string tableName = 2;
    //表备注
    string tableComment = 3;
    //类名
    string className = 4;
    //
    string tplCategory = 5;
    //包名
    string packageName = 6;
    //go文件名
    string moduleName = 7;
    //前端文件名
    string moduleFrontName = 8;
    //
    string businessName = 9;
    //功能名称
    string functionName = 10;
    //功能作者
    string functionAuthor = 11;
    //
    string pkColumn = 12;
    //
    string pkGoField = 13;
    //
    string pkJsonField = 14;
    //
    string options = 15;
    //
    string treeCode = 16;
    //
    string treeParentCode = 17;
    //
    string treeName = 18;
    //
    bool tree = 19;
    //
    bool crud = 20;
    //
    string remark = 21;
    //
    int32 isDataScope = 22;
    //
    int32 isActions = 23;
    //
    int32 isAuth = 24;
    //
    string isLogicalDelete = 25;
    //
    bool logicalDelete = 26;
    //
    string logicalDeleteColumn = 27;

}


// 更新SysTables返回
message SysTablesUpdateReply {
    int64 id = 1;
    //表名称
    string tableName = 2;
    //表备注
    string tableComment = 3;
    //类名
    string className = 4;
    //
    string tplCategory = 5;
    //包名
    string packageName = 6;
    //go文件名
    string moduleName = 7;
    //前端文件名
    string moduleFrontName = 8;
    //
    string businessName = 9;
    //功能名称
    string functionName = 10;
    //功能作者
    string functionAuthor = 11;
    //
    string pkColumn = 12;
    //
    string pkGoField = 13;
    //
    string pkJsonField = 14;
    //
    string options = 15;
    //
    string treeCode = 16;
    //
    string treeParentCode = 17;
    //
    string treeName = 18;
    //
    bool tree = 19;
    //
    bool crud = 20;
    //
    string remark = 21;
    //
    int32 isDataScope = 22;
    //
    int32 isActions = 23;
    //
    int32 isAuth = 24;
    //
    string isLogicalDelete = 25;
    //
    bool logicalDelete = 26;
    //
    string logicalDeleteColumn = 27;

}

// 删除SysTables请求
message SysTablesDeleteReq {
    int64 id = 1;
}


// 批量删除SysTables请求
message SysTablesBatchDeleteReq {
    repeated int64 ids = 1;
}


// 删除SysTables返回
message SysTablesDeleteReply {
    bool result = 1;
}

